cmake_minimum_required(VERSION 3.9)

include("cmake/HunterGate.cmake")
HunterGate(
        URL "https://github.com/ruslo/hunter/archive/v0.20.19.tar.gz"
        SHA1 "f22d712b57ed3b89e661a7ef311814aa3c424a66"
)

project(sqlite_server)

set(CMAKE_CXX_STANDARD 14)
set(Boost_USE_MULTITHREADED ON)

include(CheckIPOSupported)
check_ipo_supported(RESULT ipo_supported OUTPUT error)
if(ipo_supported)
	set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

hunter_add_package(Boost COMPONENTS system regex filesystem thread program_options)
find_package(Boost CONFIG REQUIRED system regex filesystem thread program_options)

hunter_add_package(nlohmann_json)
find_package(nlohmann_json CONFIG REQUIRED)

hunter_add_package(fmt)
find_package(fmt CONFIG REQUIRED)

hunter_add_package(sqlite3)
find_package(sqlite3 CONFIG REQUIRED)

add_executable(sqlite_server
        main.cpp
        ListenSocket.h
        Network.h
        Socket.h
        SQLiteSocket.cpp
        SQLiteSocket.h
        RequestHandler.cpp
        RequestHandler.h
        Response.cpp
        Response.h
		IResponse.h
		IRequestHandler.h
		sqlite3_wrapper/SQLDatabase.h
		sqlite3_wrapper/SQLException.h
		sqlite3_wrapper/SQLStatement.h
		Config.cpp
		Config.h
        Logger.h)
target_link_libraries(sqlite_server PUBLIC
		Boost::system
		Boost::regex
		Boost::filesystem
		Boost::thread
		Boost::program_options
        nlohmann_json
        fmt::fmt-header-only
        sqlite3
		${CMAKE_DL_LIBS})
if(WIN32)
	add_definitions(-DWIN32_LEAN_AND_MEAN)
    target_link_libraries(sqlite_server PUBLIC wsock32 ws2_32)
endif()

# Get the current working branch
execute_process(
    COMMAND git rev-parse --abbrev-ref HEAD
	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
	OUTPUT_VARIABLE GITHUB_BRANCH
	OUTPUT_STRIP_TRAILING_WHITESPACE
)

# Get the latest abbreviated commit hash of the working branch
execute_process(
	COMMAND git log -1 --format=%h
	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
	OUTPUT_VARIABLE GITHUB_COMMIT_HASH
	OUTPUT_STRIP_TRAILING_WHITESPACE
)
add_definitions("-DSQLITE_SERVER_GIT_COMMIT_HASH=\"${GITHUB_COMMIT_HASH}\"")
add_definitions("-DSQLITE_SERVER_GIT_BRANCH=\"${GITHUB_BRANCH}\"")
